--- a/index.html
+++ b/index.html
@@ -395,31 +395,31 @@ END OF IMPACT SECTION
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
       
       <!-- ErthaGrama - Earthy Green -->
-      <a href="/erthagrama.html" class="transform transition duration-500 hover:scale-105 group">
+      <a href="/pages/erthagrama.html" class="transform transition duration-500 hover:scale-105 group">
         <div class="bg-gradient-to-br from-[#1a3c1a] to-[#0d2f0d] group-hover:from-green-600 group-hover:to-lime-500 p-4 rounded-2xl shadow-2xl hover:shadow-green-400/30 transition duration-500">
-          <img src="assets/images/world.jpg" alt="ErthaGrama" class="w-full h-48 object-cover rounded-xl mb-4">
+          <img src="assets/images/Erthagrama.png" alt="ErthaGrama" class="w-full h-48 object-cover rounded-xl mb-4">
           <h3 class="text-xl font-bold text-white text-center">🌿 ErthaGrama : The Living Ecosystem</h3>
         </div>
       </a>
 
-      <!-- ErthaKoota - Blue for Global Connection -->
-      <a href="/erthakoota.html" class="transform transition duration-500 hover:scale-105 group">
+      <!-- ErthaCANnect - Blue for Global Connection -->
+      <a href="/pages/erthacannect.html" class="transform transition duration-500 hover:scale-105 group">
         <div class="bg-gradient-to-br from-[#14344a] to-[#0b2434] group-hover:from-blue-600 group-hover:to-cyan-400 p-4 rounded-2xl shadow-2xl hover:shadow-blue-300/30 transition duration-500">
-          <img src="assets/images/erthakoota.jpg" alt="ErthaKoota" class="w-full h-48 object-cover rounded-xl mb-4">
-          <h3 class="text-xl font-bold text-white text-center">🌍 ErthaKoota : The Global Network</h3>
+          <img src="assets/images/ErthaCANnect.png" alt="ErthaKoota" class="w-full h-48 object-cover rounded-xl mb-4">
+          <h3 class="text-xl font-bold text-white text-center">🌍 ErthaCANnect : The Global Network</h3>
         </div>
       </a>
 
       <!-- ErthaGyana - Knowledge Yellow -->
-      <a href="/erthagyana.html" class="transform transition duration-500 hover:scale-105 group">
+      <a href="/pages/erthagyana.html" class="transform transition duration-500 hover:scale-105 group">
         <div class="bg-gradient-to-br from-[#544800] to-[#3e3600] group-hover:from-yellow-500 group-hover:to-amber-300 p-4 rounded-2xl shadow-2xl hover:shadow-yellow-300/30 transition duration-500">
-          <img src="assets/images/Erthakriya.jpg" alt="ErthaGyana" class="w-full h-48 object-cover rounded-xl mb-4">
+          <img src="assets/images/Erthagyana.png" alt="ErthaGyana" class="w-full h-48 object-cover rounded-xl mb-4">
           <h3 class="text-xl font-bold text-white text-center">📚 ErthaGyana : Knowledge Sharing</h3>
         </div>
       </a>
 
       <!-- ErthaBazaar - Eco Market Mint/Teal -->
-      <a href="/erthabazaar.html" class="transform transition duration-500 hover:scale-105 group">
+      <a href="/pages/erthabazaar.html" class="transform transition duration-500 hover:scale-105 group">
         <div class="bg-gradient-to-br from-[#004d40] to-[#00251a] group-hover:from-teal-500 group-hover:to-green-300 p-4 rounded-2xl shadow-2xl hover:shadow-teal-300/30 transition duration-500">
           <img src="assets/images/people.jpg" alt="ErthaBazaar" class="w-full h-48 object-cover rounded-xl mb-4">
           <h3 class="text-xl font-bold text-white text-center">🛒 ErthaMart : Marketplace of the Future</h3>
@@ -427,10 +427,24 @@ END OF IMPACT SECTION
       </a>
 
       <!-- ErthaKriya - Action/Empowerment Orange -->
-      <a href="/erthakriya.html" class="transform transition duration-500 hover:scale-105 group">
+      <a href="/pages/erthakriya.html" class="transform transition duration-500 hover:scale-105 group">
         <div class="bg-gradient-to-br from-[#4a2a00] to-[#331e00] group-hover:from-orange-500 group-hover:to-yellow-400 p-4 rounded-2xl shadow-2xl hover:shadow-orange-300/30 transition duration-500">
-          <img src="assets/images/kriya.jpg" alt="ErthaKriya" class="w-full h-48 object-cover rounded-xl mb-4">
+          <img src="assets/images/ErthaKriya.png" alt="ErthaKriya" class="w-full h-48 object-cover rounded-xl mb-4">
           <h3 class="text-xl font-bold text-white text-center">🔧 ErthaKriya : Empowering Action</h3>
+        </div>
+      </a>
+      <!-- Sustainable Circle - Action/Empowerment Orange -->
+      <a href="/pages/sustainablecircle.html" class="transform transition duration-500 hover:scale-105 group">
+        <div class="bg-gradient-to-br from-[#4a2a00] to-[#331e00] group-hover:from-orange-500 group-hover:to-yellow-400 p-4 rounded-2xl shadow-2xl hover:shadow-orange-300/30 transition duration-500">
+          <img src="assets/images/SustainableCircle.png" alt="ErthaKriya" class="w-full h-48 object-cover rounded-xl mb-4">
+          <h3 class="text-xl font-bold text-white text-center">🔧 Sustainable Circle : EVents</h3>
+        </div>
+      </a>
+      <!-- ErthaVaani - Action/Empowerment Orange -->
+      <a href="/pages/ErthaVani.html" class="transform transition duration-500 hover:scale-105 group">
+        <div class="bg-gradient-to-br from-[#4a2a00] to-[#331e00] group-hover:from-orange-500 group-hover:to-yellow-400 p-4 rounded-2xl shadow-2xl hover:shadow-orange-300/30 transition duration-500">
+          <img src="assets/images/ErthaVani.png" alt="ErthaKriya" class="w-full h-48 object-cover rounded-xl mb-4">
+          <h3 class="text-xl font-bold text-white text-center">🔧 ErthaVani : Communications </h3>
         </div>
       </a>
 
