--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <!-- Custom Styles -->
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body class="bg-dark-green text-white parallax" id="body">
   
